deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-app
  template:
    metadata:
      labels:
        app: sentiment-app
    spec:
      containers:
      - name: sentiment-container
        image: sumittiwari022/sentiment-app:latest
        ports:
        - containerPort: 5000
